# veritas

./: .gitignore  LSTM.py  README.md  gpucheck.py  pyproject.toml  requirements.txt
base_model/: base_model.pkl  model.py
checkpoints/: DeepFakeNewsDetector_32_0.0005_0.001_epoch5.pth  FakeNewsDetector_128_0.001_0.0001_epoch10.pth  FakeNewsDetector_128_0.001_0.0001_epoch100.pth  FakeNewsDetector_128_0.001_0.0001_epoch15.pth  FakeNewsDetector_128_0.001_0.0001_epoch20.pth  FakeNewsDetector_128_0.001_0.0001_epoch25.pth  FakeNewsDetector_128_0.001_0.0001_epoch30.pth  FakeNewsDetector_128_0.001_0.0001_epoch35.pth  FakeNewsDetector_128_0.001_0.0001_epoch40.pth  FakeNewsDetector_128_0.001_0.0001_epoch45.pth  FakeNewsDetector_128_0.001_0.0001_epoch5.pth  FakeNewsDetector_128_0.001_0.0001_epoch50.pth  FakeNewsDetector_128_0.001_0.0001_epoch55.pth  FakeNewsDetector_128_0.001_0.0001_epoch60.pth  FakeNewsDetector_128_0.001_0.0001_epoch65.pth  FakeNewsDetector_128_0.001_0.0001_epoch70.pth  FakeNewsDetector_128_0.001_0.0001_epoch75.pth  FakeNewsDetector_128_0.001_0.0001_epoch80.pth  FakeNewsDetector_128_0.001_0.0001_epoch85.pth  FakeNewsDetector_128_0.001_0.0001_epoch90.pth  FakeNewsDetector_128_0.001_0.0001_epoch95.pth  FakeNewsDetector_128_0.001_0.0_epoch10.pth  FakeNewsDetector_128_0.001_0.0_epoch15.pth  FakeNewsDetector_128_0.001_0.0_epoch20.pth  FakeNewsDetector_128_0.001_0.0_epoch25.pth  FakeNewsDetector_128_0.001_0.0_epoch30.pth  FakeNewsDetector_128_0.001_0.0_epoch35.pth  FakeNewsDetector_128_0.001_0.0_epoch40.pth  FakeNewsDetector_128_0.001_0.0_epoch45.pth  FakeNewsDetector_128_0.001_0.0_epoch5.pth  FakeNewsDetector_128_0.001_0.0_epoch50.pth  FakeNewsDetector_128_0.01_0.0_epoch10.pth  FakeNewsDetector_128_0.01_0.0_epoch5.pth  FakeNewsDetector_256_0.01_0.0_epoch10.pth  FakeNewsDetector_256_0.01_0.0_epoch15.pth  FakeNewsDetector_256_0.01_0.0_epoch20.pth  FakeNewsDetector_256_0.01_0.0_epoch25.pth  (+69 more)
test/: article_scraper.py
(+107 files in other folders)
