[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.0.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.0.0"
matplotlib = ">=3.0.0"
seaborn = ">=0.10.0"

[tool.poetry]
name = "veritas"
version = "0.1.0"
description = "Veritas"
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
train-rnn = "src.rnn_model.train:main"
train-base = "src.base_model.train:main"
gather-data = "src.dataset.process_data:main"
visualize-rnn = "src.rnn_model.visualize:main"
visualize-base = "src.base_model.visualize:main"